# trendbot

./: .gitignore  README.md  agentcore-setup-guide.md  git-push.sh  mcp-proxy.js  mcp-proxy.mjs  observability-setup-guide.md  package-lock.json  package.json  tsconfig.json
.kiro/specs/mcp-application/: .config.kiro  aws-blog.ts  competitor-news.ts  design.md  news-search.ts  requirements.md  tasks.md
agents/: README.md  deploy-all.sh
agents/search-blog/: .bedrock_agentcore.yaml  agent.py  pyproject.toml
agents/search-blog/src/: main.py
agents/search-competitors/: .bedrock_agentcore.yaml  agent.py  pyproject.toml  requirements.txt
agents/search-competitors/src/: main.py
agents/search-news/: .bedrock_agentcore.yaml  agent.py  pyproject.toml
agents/search-news/src/: main.py
infra/: package-lock.json  package.json  tsconfig.json
infra/lib/: mcp-infra-stack.ts
src/: index.ts
src/agents/: aws-blog.ts  bedrock-client.ts  competitor-news.ts  news-search.ts  news-summary.ts
src/formatters/: user-friendly-formatter.ts
src/handlers/: lambda.ts  prompts.ts  resources.ts  tools.ts
src/types/: agents.ts  formatter.ts  index.ts
src/utils/: jsonrpc.ts  validation.ts
